--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .demo{
+            font-family: sans-serif;
+            overflow-x: auto;
+        }
+    </style>
 </head>
 <body>
-    <div id="app">
+    <div id="app" class="demo">
         <input type="text" placeholder="Please enter some text..." v-model="message">
         <p :title='title'>{{message}}</p>
     </div>
